--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -110,29 +110,81 @@
 </scroll-view>
 <!--通知公告标题部分  -->
 <view class="notice">
-<text style="font-size: large; font-weight: bold;">通知公告</text>
-<text bind:tap="notici">通知公告</text>
-<text>综合信息</text>
-<text>学术动态</text>
+<text style="font-size: large; font-weight: bold;">{{a}}</text>
+<text bind:tap="notice1">通知公告</text>
+<text bind:tap="notice2">综合信息</text>
+<text bind:tap="notice3">学术动态</text>
 </view>
-<!-- 通知公告内容部分 -->
+
+<!-- 通知公告板块-->
+<view style="display: {{pb1}};">
 <view class="noticelast">
-<view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
+<view class="noticelast1" >加强新生入学后校园安全管理规范的通知</view>
 <image class="noticeimage" src="/pict/pt3-1.png" mode=""/>
 </view>
-<view class="noticelast2"> 校园新闻网</view>
-<view class="noticelast">
+<view class="noticelast2" > 校园新闻网</view>
+
+<view class="noticelast" >
 <view class="noticelast1">关于开展2023新生入学教育系列培训课程的指导意见
 </view>
 <image class="noticeimage"src="/pict/pt3-2.png" mode=""/>
 </view>
 <view class="noticelast2"> 校园新闻网</view>
+<!-- 学术动态板块 -->
 <view class="noticelast">
 <view class="noticelast1">关于加强新生入学后校园安全管理条例实行的通知
 </view>
 <image class="noticeimage" src="/pict/pt3-3.png" mode=""/>
 </view>
 <view class="noticelast2"> 校园新闻网</view>
+</view>
+
+
+<!-- 综合信息板块-->
+<view style="display: {{pb2}};">
+<view class="noticelast">
+<view class="noticelast1" >将更加个性化和定制化，注重发展学生的创新能力和综合素质</view>
+<image class="noticeimage" src="/pict/pt3-1.png" mode=""/>
+</view>
+<view class="noticelast2" > 校园新闻网</view>
+
+<view class="noticelast" >
+<view class="noticelast1">我们要习惯面对不确定、培养面向未来具有主动适应能力的学习者
+</view>
+<image class="noticeimage"src="/pict/pt3-2.png" mode=""/>
+</view>
+<view class="noticelast2"> 校园新闻网</view>
+
+<view class="noticelast">
+<view class="noticelast1">传统教育模式下学校的形态和功能
+</view>
+<image class="noticeimage" src="/pict/pt3-3.png" mode=""/>
+</view>
+<view class="noticelast2"> 校园新闻网</view>
+</view>
+
+<!-- 学术动态板块 -->
+<view style="display: {{pb3}};">
+<view class="noticelast">
+<view class="noticelast1" >聚焦学生高阶思维和关键能力，拥有灵活、常态化使用的课堂环境</view>
+<image class="noticeimage" src="/pict/pt3-1.png" mode=""/>
+</view>
+<view class="noticelast2" > 校园新闻网</view>
+
+<view class="noticelast" >
+<view class="noticelast1">传统教育模式下学校的形态和功能
+</view>
+<image class="noticeimage"src="/pict/pt3-2.png" mode=""/>
+</view>
+<view class="noticelast2"> 校园新闻网</view>
+
+<view class="noticelast">
+<view class="noticelast1">传统教育模式下学校的形态和功能
+</view>
+<image class="noticeimage" src="/pict/pt3-3.png" mode=""/>
+</view>
+<view class="noticelast2"> 校园新闻网</view>
+</view>
 
 <!-- 结束处 -->
 </view>
