--- a/pages/inter/inter.wxml
+++ b/pages/inter/inter.wxml
@@ -6,17 +6,25 @@
 <view class="top">
 <view style="font-weight: bold; font-size: large; position: relative; left: 50rpx; " >发现</view>
 <view class="topborder">
-<view class="search"><image src="/pict2/search.png" mode=""/></view>
+
+<view class="search">
+<image src="/pict2/search.png" mode=""/>
+
+</view>
+
+
 <view class="searchtext">搜索应用 消息 新闻</view>
 </view>
 <image src="/pict2/scode.png" mode=""/>
+<navigator url="/pages/cate/cate" open-type="switchTab">
 <image src="/pict2/mess.png" mode=""/>
+</navigator>
 </view>
 <!-- 滚动条 -->
 <scroll-view class="scrollarea" scroll-y type="list" >
 <!-- 发现新鲜事 -->
 <view class="pct1box">
-  <image class="pct1" src="/pict4/top.png"/>
+  <image class="pct1" src="/pict/1.png"/>
   <view class="text1">
   <view style=" margin-bottom: -240rpx; position:relative; top: -250rpx;">发现新鲜事</view>
   <view style="font-size: 25rpx;">校内各院系各部门重要新闻汇报</view>
@@ -25,13 +33,15 @@
    </view>
    <!-- 通知公告文字部分 -->
   <view class="notice">
-      <text style="font-size: large; font-weight: bold;">通知公告</text>
-      <text>通知公告</text>
-      <text>综合信息</text>
-      <text>学术动态</text>
+      <text style="font-size: large; font-weight: bold;">{{a}}</text>
+      <text bind:tap="notice1">通知公告</text>
+      <text bind:tap="notice2">综合信息</text>
+      <text bind:tap="notice3">学术动态</text>
   </view>
   
-  <!-- 通知公告内容 -->
+  <!-- 板块1-->
+
+<view style="display: {{pb1}};">
 <view  class="noticebox">
   <view class="noticelast">
       <view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
@@ -58,7 +68,66 @@
       </view>
   <view class="noticelast2"> 校园新闻网</view>
 </view>
+</view>
 
+  <!-- 板块2-->
+  <view style="display: {{pb2}};">
+  <view  class="noticebox">
+  <view class="noticelast">
+      <view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
+      <image class="noticeimage" src="/pict/pt3-1.png" mode=""/>
+  </view>
+  <view class="noticelast2"> 校园新闻网</view>
+</view>
+
+
+<view  class="noticebox">
+<view class="noticelast">
+      <view class="noticelast1">加强新生入学后校园安全管理规范的通知
+      </view>
+      <image class="noticeimage"src="/pict/pt3-2.png" mode=""/>
+</view>
+<view class="noticelast2"> 校园新闻网</view>
+</view>
+
+<view class="noticebox">
+  <view class="noticelast">
+      <view class="noticelast1">加强新生入学后校园安全管理规范的通知
+      </view>
+      <image class="noticeimage" src="/pict/pt3-3.png" mode=""/>
+      </view>
+  <view class="noticelast2"> 校园新闻网</view>
+</view>
+</view>
+  <!-- 板块3-->
+  <view style="display: {{pb3}};">
+  <view  class="noticebox">
+  <view class="noticelast">
+      <view class="noticelast1">关于加强新生入学后校园安全管理条例实行的通知</view>
+      <image class="noticeimage" src="/pict/pt3-1.png" mode=""/>
+  </view>
+  <view class="noticelast2"> 校园新闻网</view>
+</view>
+
+
+<view  class="noticebox">
+<view class="noticelast">
+      <view class="noticelast1">关于加强新生入学后校园安全管理条例实行的通知
+      </view>
+      <image class="noticeimage"src="/pict/pt3-2.png" mode=""/>
+</view>
+<view class="noticelast2"> 校园新闻网</view>
+</view>
+
+<view class="noticebox">
+  <view class="noticelast">
+      <view class="noticelast1">关于加强新生入学后校园安全管理条例实行的通知
+      </view>
+      <image class="noticeimage" src="/pict/pt3-3.png" mode=""/>
+      </view>
+  <view class="noticelast2"> 校园新闻网</view>
+</view>
+</view>
 
 
   
