--- a/pages/login2/login2.wxss
+++ b/pages/login2/login2.wxss
@@ -28,14 +28,14 @@ page {
   height: 100px;
 left: 10px;
 }
-.M-TB{
+.login3{
 
   margin-top: -110px;
   margin-left: -80px;
   display: flex;
   justify-content: center;
 }
-.M-TB image{
+.login3 image{
   position: relative;
   width: 32px;
   height: 32px;
@@ -55,7 +55,7 @@ top: 20px;
 left: -10px;
 }
 
-.M-TB-1{
+.login3-1{
 
   width: 32px;
   height: 32px;
@@ -64,7 +64,7 @@ left: -10px;
   margin-left: 60px;
 }
 
-.M-TB-Text{
+.login3-Text{
   display: block;
   width: 44px;
   position: relative;
