--- a/pages/login2/login2.wxml
+++ b/pages/login2/login2.wxml
@@ -5,39 +5,38 @@
   <view class="container">
 <view class="title">  
 
+<!-- 欢迎文字 -->
 <text >紫皮卡，你好</text>
 <text class="t2" style="font-size: 12px;">登录智慧门户系统</text>
  <navigator url="/pages/index/index" open-type="switchTab" hover-class="other-navigator-hover">
 <image src="/imgs/left.png"  />
-
  </navigator>
-
-
  </view>
+ <!-- 人脸识别按钮 -->
  <view class="main">
     <image src="/pict/newfeel.png" mode="" bind:tap="sucess"/>
     <text class="t3"> 点击进行人脸识别</text>
  </view>
-
- <view class="M-TB">
+<!-- 三种登陆方式 -->
+ <view class="login3">
  
-<view class="M-TB-1" >   
+<view class="login3-1" >   
   <image src="/imgs/LG/1.png" mode="" bind:tap="yj"/>
-  <text class="M-TB-Text"  >扫脸登录</text> 
+  <text class="login3-Text"  >扫脸登录</text> 
 </view>
 
 
 
  
-<view class="M-TB-1" >   
-<navigator url="/pages/login3/login3?title=navigate" hover-class="navigator-hover" >  
+<view class="login3-1" >   
+<navigator url="/pages/login3/login3?title=navigate" >  
   <image src="/imgs/LG/2.png" mode=""/>
 </navigator>
-<text class="M-TB-Text" >一键登录</text> </view>
+<text class="login3-Text" >一键登录</text> </view>
 
-<view class="M-TB-1" >   
+<view class="login3-1" >   
   <image src="/imgs/LG/3.png" mode=""/>
-<text class="M-TB-Text" >微信登录</text> </view>
+<text class="login3-Text" >微信登录</text> </view>
 
 
 </view>
