--- a/pages/inter/inter.wxml
+++ b/pages/inter/inter.wxml
@@ -83,7 +83,7 @@
 
 <view  class="noticebox">
 <view class="noticelast">
-      <view class="noticelast1">加强新生入学后校园安全管理规范的通知
+      <view class="noticelast1">全面贯彻落实党的教育方针，坚持社会主义办学方向
       </view>
       <image class="noticeimage"src="/pict/pt3-2.png" mode=""/>
 </view>
