--- a/pages/inter/inter.wxml
+++ b/pages/inter/inter.wxml
@@ -74,7 +74,7 @@
   <view style="display: {{pb2}};">
   <view  class="noticebox">
   <view class="noticelast">
-      <view class="noticelast1">加强新生入学后校园安全管理规范的通知</view>
+      <view class="noticelast1">全面贯彻落实党的教育方针，坚持社会主义办学方向</view>
       <image class="noticeimage" src="/pict/pt3-1.png" mode=""/>
   </view>
   <view class="noticelast2"> 校园新闻网</view>
